apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'

sourceCompatibility = 1.6
targetCompatibility = 1.6
version = '2.2.2'
group = 'com.mass'

repositories { mavenCentral() }

dependencies {
	// curator
	compile 'org.apache.curator:curator-client:2.4.0'
	compile 'org.apache.curator:curator-framework:2.4.0'
	compile 'org.apache.curator:curator-recipes:2.4.0'
	// end curator

    compile 'com.google.guava:guava:18.0'
	compile 'joda-time:joda-time:2.3'
	compile 'org.springframework:spring-context:3.2.8.RELEASE'
	compile 'org.springframework:spring-core:3.2.8.RELEASE'
	compile 'org.springframework:spring-aspects:3.2.8.RELEASE'
	compile 'commons-lang:commons-lang:2.6'
    compile 'commons-codec:commons-codec:1.8'
	compile 'commons-collections:commons-collections:3.2.1'

	testCompile 'org.springframework:spring-test:3.1.0.RELEASE'
	testCompile 'junit:junit:4.11'
	testCompile 'org.mockito:mockito-all:1.9.5'
}

task sourceJar(type: Jar) {
    from sourceSets.main.allJava
}

task testJar(type: Jar) {
    classifier = 'test'
    from sourceSets.test.output
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            
            artifact sourceJar {
                classifier "sources"
            }
            
            artifact testJar {
                classifier "test"
            }
        }
    }
    repositories {
        maven {
            url "$projectDir/mvn"
        }
    }
}

test {
	systemProperties = System.properties
	testReport = true;
	testLogging {
		showStandardStreams = true;
		exceptionFormat "full" //default is short
	}
	// listen to standard out and standard error of the test JVM(s)
	onOutput { descriptor, event ->
		logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
	}
	jvmArgs '-XX:MaxPermSize=128m'
}

eclipse {
	project {
		natures 'org.eclipse.jdt.core.javanature'
		buildCommand 'org.eclipse.jdt.core.javabuilder'
	}
	classpath {
		downloadSources=true
		defaultOutputDir = file('build/eclipse/bin')
	}
}

